--- a/packages/bodiless-scaffold/src/templates/component/index.static.ts.hbs
+++ b/packages/bodiless-scaffold/src/templates/component/index.static.ts.hbs
@@ -1,6 +1,8 @@
 import {
-  StaticBlock as {{properCase componentName}}Static,
   staticTokenCollection as vital{{properCase componentName}}Static,
+  StaticBlock as {{properCase componentName}}Static,
+  // Use `StaticInline` if your component renders inline elements.
+  // StaticInline as {{properCase componentName}}Static,
 } from '@bodiless/hydration';
 
 export { {{properCase componentName}}Static, vital{{properCase componentName}}Static };
