--- a/packages/bodiless-scaffold/src/templates/component/tests/Component.test.tsx.hbs
+++ b/packages/bodiless-scaffold/src/templates/component/tests/Component.test.tsx.hbs
@@ -1,10 +1,5 @@
 import React from 'react';
-import { shallow } from 'enzyme';
-import Component from '../Component';
+import { testTokens } from '@bodiless/vital-elements';
+import { {{properCase componentName}} } from '..';
 
-describe('Component', () => {
-  it('should render correctly', () => {
-    const wrapper = shallow(<Component />);
-    expect(wrapper).toMatchSnapshot();
-  });
-});
+describe('{{properCase componentName}} Tokens', testTokens({{properCase componentName}}));
