--- a/packages/bodiless-scaffold/src/templates/component/index.ts.hbs
+++ b/packages/bodiless-scaffold/src/templates/component/index.ts.hbs
@@ -1,2 +1,4 @@
 export { default as {{camelCase libraryName}}{{properCase componentName}} } from './tokens';
 export { default as {{camelCase libraryName}}{{properCase componentName}}Base } from './tokens/{{camelCase libraryName}}{{properCase componentName}}';
+
+export * from './index.bl-edit';
